<resources>
    <string name="app_name">Score Keeper App</string>
    <string name="title">American Football</string>
    <string name="teamA">Team A</string>
    <string name="teamB">Team B</string>
    <string name="touch_down">+6 Touchdown</string>
    <string name="field_goal">+3 Field Goal</string>
    <string name="safety">+2 Safety</string>
    <string name="extra_point">+1 Extra Point</string>
    <string name="reset">Reset</string>
</resources>