<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/margin_bottom"
    android:background="@color/background_color"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_bottom"
        android:gravity="center"
        android:text="@string/title"
        android:textColor="@color/button_background_reset"
        android:textSize="@dimen/title_size"
        android:textStyle="bold"
        android:textAlignment="center" />

    <LinearLayout
        android:id="@+id/controls"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/title"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/teamA"
                android:textSize="@dimen/team_label_size"
                android:textColor="@color/button_background"
                />

            <TextView
                android:id="@+id/team_a_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/margin_bottom"
                android:layout_marginTop="16dp"
                android:text="0"
                android:fontFamily="sans-serif-light"
                android:textColor="@android:color/black"
                android:textSize="@dimen/score_size" />

            <Button
                android:id="@+id/six_points_for_a"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_bottom"
                android:background="@color/button_background"
                android:onClick="sixPointsForTeam"
                android:padding="@dimen/button_padding"
                android:text="@string/touch_down"
                android:textColor="@color/button_foreground" />

            <Button
                android:id="@+id/three_points_for_a"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_bottom"
                android:background="@color/button_background"
                android:onClick="threePointsForTeam"
                android:padding="@dimen/button_padding"
                android:text="@string/field_goal"
                android:textColor="@color/button_foreground" />

            <Button
                android:id="@+id/two_points_for_a"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_bottom"
                android:background="@color/button_background"
                android:onClick="twoPointsForTeam"
                android:padding="@dimen/button_padding"
                android:text="@string/safety"
                android:textColor="@color/button_foreground" />

            <Button
                android:id="@+id/one_point_for_a"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/button_background"
                android:onClick="onePointForTeam"
                android:padding="@dimen/button_padding"
                android:text="@string/extra_point"
                android:textColor="@color/button_foreground" />
        </LinearLayout>

        <View
            android:layout_width="@dimen/separator_width"
            android:layout_height="@dimen/separator_height"
            android:layout_marginLeft="@dimen/separator_margin"
            android:layout_marginRight="@dimen/separator_margin"
            android:background="@color/separator_color" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/teamB"
                android:textSize="@dimen/team_label_size"
                android:textColor="@color/button_background" />

            <TextView
                android:id="@+id/team_b_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/margin_bottom"
                android:layout_marginTop="16dp"
                android:text="0"
                android:fontFamily="sans-serif-light"
                android:textColor="@android:color/black"
                android:textSize="@dimen/score_size" />

            <Button
                android:id="@+id/six_points_for_b"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_bottom"
                android:background="@color/button_background"
                android:onClick="sixPointsForTeam"
                android:padding="@dimen/button_padding"
                android:text="@string/touch_down"
                android:textColor="@color/button_foreground" />/>

            <Button
                android:id="@+id/three_points_for_b"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_bottom"
                android:background="@color/button_background"
                android:onClick="threePointsForTeam"
                android:padding="@dimen/button_padding"
                android:text="@string/field_goal"
                android:textColor="@color/button_foreground" />/>

            <Button
                android:id="@+id/two_points_for_b"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_bottom"
                android:background="@color/button_background"
                android:onClick="twoPointsForTeam"
                android:padding="@dimen/button_padding"
                android:text="@string/safety"
                android:textColor="@color/button_foreground" />

            <Button
                android:id="@+id/one_point_for_b"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/button_background"
                android:onClick="onePointForTeam"
                android:padding="@dimen/button_padding"
                android:text="@string/extra_point"
                android:textColor="@color/button_foreground" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/margin_bottom"
        android:background="@color/button_background_reset"
        android:onClick="resetScores"
        android:text="@string/reset"
        android:textColor="@color/button_foreground" />
</RelativeLayout>